# synapse-domain-rule-checker

./: pyproject.toml
.github/workflows/: ci.yml
synapse_domain_rule_checker/: __init__.py
tests/: test_domain_rule_checker.py
